@@ -51,6 +51,8 @@
                   required="no" _description="The formatting template for the program id (default '%03d.')." />
         <property name="write-index" type="bool"
                   required="no" _description="Writes an index for each file." />
+        <property name="sync-on-tdt" type="bool"
+                  required="no" _description="Start files from the first buffer after a 'tdt' upstream event." />
       </properties>
     </component>
   </components>
